- (BUGF) fix webui search error (fixed better on devel)
- (BUGF) fix duplicate power reference
- (BUGF) fix error message that makes it appear dnsmasq had a problem restarting, when it did not
- (BUGF) spec requires python-urlgrabber
- (BUGF) change settings default from 'ksdevice=eth0' to 'bootif'
- (BUGF) keep DHCP restart quiet
- (BUGF) better hostname setting with DHCP management on

- Mon Mar 30 2009 - 1.6.2
- (BUGF) Fix for cache cleanup problem in cobblerd 

- Fri Mar 27 2009 - 1.6.1
- (FEAT) Improved anaconda monitoring code
- (FEAT) download comps.xml always (even if yum does not have the option)
- (FEAT) performance upgrades for cobblerd service to avoid reloads
- (FEAT) more code for s390 imports (WIP)
- (BUGF) import works better with rawhide
- (FEAT) snippet to preserve SSH host keys across reinstalls
- (FEAT) email trigger to notify when builds finish
- (FEAT) triggers now are written in Python, old system still exists.
- (FEAT) s390x zpxe support
- (BUGF) retry power 5 times before giving up
- (BUGF) fix for RHEL3 ppc imports
- (FEAT) use nameserver variable in network config in Anaconda when set
- (BUGF) sleep 5 seconds between power cycling systems
- (FEAT) support for /usr/bin/cobbler-register
- (FEAT) web UI search feature
- (FEAT) very simple "cobbler hardlink" command to optimize space in /var/www/cobbler
- (FEAT) new "change" trigger that runs on all adds/edits/removes/syncs
- (FEAT) an SCM trigger that knows about /var/lib/cobbler kickstarts, snippets, and config directories, and audits them for changes
- (BUGF) update ctime on object copies
- (BUGF) fix cobbler check code that makes sure default password is not in use
- (BUGF) remove duplicate text box for management classes from server edit page
- (BUGF) fix stderr output on Ctrl+C
- (BUGF) potential performance savings WRT duplicate python objects
- (BUGF) don't deserialize during sync, it makes it take twice as long
- (FEAT) Ubuntu support for import (added/improved)