@@ -26,6 +26,7 @@ Cobbler CHANGELOG
 - (BUGF) change settings default from 'ksdevice=eth0' to 'bootif'
 - (BUGF) keep DHCP restart quiet
 - (BUGF) better hostname setting with DHCP management on
+- (BUGF) fix bug in repo breed auto-detection code
 
 - Mon Mar 30 2009 - 1.6.2
 - (BUGF) Fix for cache cleanup problem in cobblerd 
